# noah-ide

./: .gitignore  LICENSE  README.md  demo-presentation.noah  index.html  noah-v1-spec.md  package.json  pnpm-lock.yaml  template.noah.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AiChatPanel.vue  AiConfigPanel.vue  Canvas.vue  CanvasSelector.vue  CodeEditor.vue  ComponentBar.vue  DockPanel.vue  LeftPanel.vue  MenuBar.vue  PresenterPanel.vue  PreviewIframe.vue  ProgressOverlay.vue  PropertyPanel.vue
src/composables/: systemPrompt.ts  useAiChat.ts  useAnimeEngine.ts  useCodeGenerator.ts  useDockLayout.ts  useExport.ts  useHistory.ts  usePptxEditableExport.ts  usePptxExport.ts  usePptxImport.ts  usePresenterMode.ts  useSanitize.ts
src/config/: cdn.ts
src/stores/: ai.ts  project.ts
src/types/: component.ts  dock.ts  effect.ts  fontPresets.ts
src/views/: Editor.vue
