[package]
name = "noah-ide"
version = "1.2.6"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview-data-url"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
webbrowser = "1"
